# todo

./: README.md  meson.build
src/: db.c  db.h  todo.c  utils.c  utils.h  xmalloc.c  xmalloc.h
src/actions/: add.c  add.h  check.c  check.h  delete.c  delete.h  dismiss.c  dismiss.h  list.c  list.h
